拆分项目，加入Admin模块

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,12 @@ hs_err_pid*
 *.lst
 out
 gen
+ProxyAdmin/.gitignore
+ProxyAdmin/.mvn/
+ProxyAdmin/mvnw
+ProxyAdmin/mvnw.cmd
+ProxyClient/target/
+ProxyCommon/target/
+ProxyServer/target/
+logs
+
