--- a/ProxyClient/pom.xml
+++ b/ProxyClient/pom.xml
@@ -2,13 +2,10 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>DeviceProxy</artifactId>
-        <groupId>com.zyl</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.zyl</groupId>
+    <modelVersion>4.0.0</modelVersion>
+    <version>1.0</version>
     <artifactId>ProxyClient</artifactId>
     <build>
         <finalName>ProxyClient</finalName>
