--- a/ProxyServer/pom.xml
+++ b/ProxyServer/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
         </dependency>
+        <dependency>
+            <groupId>com.zhz</groupId>
+            <artifactId>httpServer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
