--- a/ProxyCommon/pom.xml
+++ b/ProxyCommon/pom.xml
@@ -29,7 +29,11 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.33.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.7.0</version>
+        </dependency>
     </dependencies>
 
 </project>
