--- a/ProxyCommon/pom.xml
+++ b/ProxyCommon/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>curator-recipes</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 
 </project>
